--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -606,7 +606,7 @@
     "            \n",
     "    def traverse(self): #6\n",
     "        if not self.isEmpty():\n",
-    "            a = [str(item) for item in self.items]  # Use __str__ to get the string representation\n",
+    "            a = [str(item) for item in self.items]\n",
     "            print(a)\n",
     "            \n",
     "class Queue:\n",
@@ -638,7 +638,7 @@
     "            \n",
     "    def traverse(self): #6\n",
     "        if not self.isEmpty():\n",
-    "            a = [str(item) for item in self.items]  # Use __str__ to get the string representation\n",
+    "            a = [str(item) for item in self.items]\n",
     "            print(a)\n",
     "\n",
     "def main():\n",
